# random-color-generator

./: .gitignore  Cargo.toml  cbindgen.toml  index.html  main-c31e0bbd7ecb1e55.css  main-ca1ad5debe271b14.css  main-d0521fc3d3f86ad0.css  main-e4555440a5527e28.css  random-color-generator-web-13f1a21dd5f359a.js  random-color-generator-web-13f1a21dd5f359a_bg.wasm  random-color-generator-web-2ad7d07ec2718d12.js  random-color-generator-web-2ad7d07ec2718d12_bg.wasm  random-color-generator-web-2ce2ff0ecbd45a2e.js  random-color-generator-web-2ce2ff0ecbd45a2e_bg.wasm  random-color-generator-web-2d8b98e20d0b5873.js  random-color-generator-web-2d8b98e20d0b5873_bg.wasm  random-color-generator-web-4624244c93545cfe.js  random-color-generator-web-4624244c93545cfe_bg.wasm  random-color-generator-web-8a5afe6dafaf6b98.js  random-color-generator-web-8a5afe6dafaf6b98_bg.wasm  random-color-generator-web-bd9d5e480ac8cc46.js  random-color-generator-web-bd9d5e480ac8cc46_bg.wasm  random-color-generator-web-d8684c5a876a01d0.js  random-color-generator-web-d8684c5a876a01d0_bg.wasm  random-color-generator-web-f6764efeb4deabf6.js  random-color-generator-web-f6764efeb4deabf6_bg.wasm  random-color-generator-web-fc4c4f91a8c02b75.js  random-color-generator-web-fc4c4f91a8c02b75_bg.wasm
.cargo/: config.toml
.github/workflows/: publish_gh_pages.yml
android/app/: build.gradle
include/: random_color_generator.h
lib/: Cargo.toml
lib/src/: android.rs  lib.rs  macos.rs  models.rs  wasm.rs
macOS/Random Color Generator.xcodeproj/: project.pbxproj
macOS/RandomColorGenerator/: ContentView.swift  RandomColorGeneratorApp.swift
macOS/RandomColorGeneratorTests/: RandomColorGeneratorTests.swift
scripts/: cleanup.sh  pre-build-android.sh  pre-build-macOS.sh
web/: Cargo.toml  README.md  Trunk.toml  app.webmanifest  index.html  service_worker.js
web/src/: main.rs
web/style/: main.scss
windows/: App.xaml  App.xaml.cs  HexColorExtensions.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  RandomColorGenerator.csproj  RandomColorGenerator.sln  app.manifest
(+14 files in other folders)
