[package]
name = "random-color-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]


[dependencies]
rand = { version = "0.8.5" }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21.1", default-features = false }
openssl = { version = "0.10.35", features = ["vendored"] }
