[package]
name = "random-color-generator-web"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Shared Library
random-color-generator = { path = "../lib" }

# Web Frontend Framwork
leptos = { version = "0.4.3" }
leptos_meta = { version = "0.4.3", features = ["csr"] }

# Serialization Library
serde = { version = "1.0.171", features = ["derive"] }

# Random Generator
rand = "0.8.5"
getrandom = { version = "0.2.10", features = ["js"] }

# Web APIs 
[dependencies.web-sys]
version = "0.3.64"
features = [
    "CssStyleDeclaration",
    "Clipboard",
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "Navigator",
]
